@@ -1,5 +1,12 @@
 2007-05-26  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-icon-names.h: add new icon
+	* panel-menu-items.c: (panel_place_menu_item_append_volumes): use an
+	icon for removable media menu item
+	Fix FIXME and bug #343180
+
+2007-05-26  Vincent Untz  <vuntz@gnome.org>
+
 	* panel-ditem-editor.c: (panel_ditem_editor_name_changed),
 	(panel_ditem_editor_comment_changed),
 	(panel_ditem_editor_icon_changed), (panel_ditem_editor_revert): use
